--- a/wlcreatorKDE.desktop
+++ b/wlcreatorKDE.desktop
@@ -1,18 +1,12 @@
-
 [Desktop Entry]
-Actions=CreateLauncher;
-Icon=dialog-information
-ServiceTypes=KonqPopupMenu/Plugin,application/x-ms-dos-executable
 Type=Service
+ServiceTypes=KonqPopupMenu/Plugin
+MimeType=application/x-msdos-program;application/x-ms-dos-executable;
+Actions=CreateLauncher;
 X-KDE-Priority=TopLevel
-#X-KDE-Submenu=Wine
-TryExec=wlcreator.py
+Icon=wine
 
 [Desktop Action CreateLauncher]
 Name=Wine Launcher Creator
 Icon=wine
 Exec=wlcreator.py %u
-Name[en_US]=Wine Launcher Creator
-Name[en]=Wine Launcher Creator
-Name[C]=Wine Launcher Creator
-
